
It is a preview release, not intended for serious development.  Developers
are encouraged to try it out and send feedback to jena-dev@yahoogroups.com.

This release adds a substantially revised and improved ontology API along
with improved reasoning support for RDFS and many small improvements to 
the graph SPI.


Database:

The database layout has changed from preview 3 based on feedback and
further experimentation.  It wil be necessary to dump a databse built with
preview 3 and rebuild it.

Ontology API:

The Jena2 ontology API has now stabilised into something close to its
final form.  The main package in com.hp.hpl.jena.ontology is mostly 
complete, except for Java classes to directly represent an axiom-centric
view of the ontology rather than an object-centric view.  The Jena1 DAML
API has been migrated to the new ontology API structure, and appears as
com.hp.hpl.jena.ontology.daml. Some migration steps of the old API remain 
to be completed, so the DAML subsystem should used with care. Note that
the main ontology API will also handle DAML+OIL ontologies; the legacy API
is included to assist Jena1 DAML users to adapt their code to Jena2. New
users are recommended to use the main ontology API exclusively.

The default reasoner for all ontology models is currently the RDFS reasoner.
Please see the documentation in
	<Jena>/doc/user-manual/ontology
for an explanation of how to select the reasoner and other options when
constructing the ontology model.

Reasoners:

The previous default RDFS reasoner (RDFSReasoner1) has been replaced by
a new implementation (RDFSRuleReasoner) which in turn is based on a generic
hybrid rules engine which is included with Jena. This implementation is
faster, more scalable and more configurable than the earlier version.

The release also includes a very preliminary rule set which implements the
OWL/Lite subset of OWL/full. This implementation is not yet stable or scalable 
and is not recommended for non-trivial use at this stage.
